# MakeVision

./: .gitignore  MANIFEST.in  MakeVision.drawio  README.md  main.py  pyproject.toml  requirements.txt
examples/color_detection_example/: pipeline.py
examples/hand_pose_example/: pipeline.py
examples/model_injection_example/: camera_calibration.json  pipeline.py
makevision/: __init__.py  makevision.py
makevision/calibration/: __init__.py  webcam_calibration.py
makevision/core/: __init__.py  calibration.py  detect.py  file_manager.py  filter.py  model.py  network.py  obstructions.py  pipeline.py  reader.py  state.py
makevision/detection/: __init__.py  color_detection.py  yolo_detection.py
makevision/file_handling/: __init__.py  calibration_data_file_manager.py  data_file_manager.py  file_manager_factory.py  json_file_manager.py  load_calibration_data.py  numpy_file_manager.py  yaml_file_manager.py
makevision/model/: __init__.py  color_model.py  onxx_model.py  tf_model.py  yolo_model.py
makevision/network/: __init__.py  socketio_network.py
makevision/pipelines/: __init__.py  basic_pipeline.py
makevision/reader/: __init__.py  image_reader.py  video_reader.py  webcam_reader.py
makevision/utils/: __init__.py  timer.py  utils.py
plugins/example_plugin/: filter.py  network.json  obstruction_detector.py  pipeline.py  state.py
src/calibration/: webcam_calibration.py
src/core/: __init__.py  calibration.py  obstructions.py  pipeline.py  state.py
src/detection/: __init__.py  yolo_detection.py
src/file_handling/: file_manager_factory.py  (+3 more)
(+9 files in other folders)
